<resources>
    <string name="app_name">InfoCOVID-19</string>
    <string name="_positif">Positif</string>
    <string name="_text_view">Text View</string>
    <string name="_nama_provinsi">Nama Provinsi</string>
    <string name="sembuh">Sembuh</string>
    <string name="_angka__1_111_671">1,111,671</string>
    <string name="_905_665">905,665</string>
    <string name="_30_770">30,770</string>
    <string name="_109904">109,903</string>
    <string name="_dirawat">Dirawat</string>
    <string name="_sembuh">Sembuh</string>
    <string name="_meninggal">Meninggal</string>
</resources>