<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activity.MainActivity">

    <ImageView
        android:id="@+id/iv_infoCovid"
        android:layout_width="@dimen/_187dp"
        android:layout_height="@dimen/_62dp"
        android:layout_marginTop="@dimen/_4dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_pake_masker"
        android:layout_width="0dp"
        android:layout_height="@dimen/_300dp"
        android:src="@drawable/pakemasker"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="69dp"
        app:layout_constraintTop_toBottomOf="@id/iv_infoCovid"
        tools:ignore="MissingConstraints" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="@dimen/_200dp"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_16dp"
        android:layout_marginEnd="@dimen/_16dp"
        app:cardCornerRadius="@dimen/_8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_pake_masker">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8dp"
                android:layout_marginTop="@dimen/_8dp"
                android:textColor="@android:color/holo_blue_light"
                android:text="@string/_positif"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
            android:id="@+id/tvDirawat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8dp"
            android:layout_marginTop="@dimen/_8dp"
            android:text="@string/_dirawat"
            android:textColor="#FFC107"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/line1" />

        <View
            android:id="@+id/line1"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_1dp"
            android:background="@android:color/darker_gray"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/line2"
            android:layout_width="@dimen/_1dp"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvSembuh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8dp"
            android:layout_marginTop="@dimen/_8dp"
            android:text="@string/_sembuh"
            android:textColor="#49BA4D"
            app:layout_constraintStart_toEndOf="@+id/line2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvMeninggal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8dp"
            android:layout_marginTop="@dimen/_8dp"
            android:text="@string/_meninggal"
            android:textColor="#ED0000"
            app:layout_constraintStart_toEndOf="@+id/line2"
            app:layout_constraintTop_toBottomOf="@+id/line1" />

            <TextView
                android:id="@+id/tvPositive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8dp"
                android:textSize="@dimen/_24sp"
                android:textStyle="bold"
                android:textColor="@android:color/holo_blue_light"
                app:layout_constraintStart_toStartOf="@id/textView1"
                app:layout_constraintTop_toBottomOf="@id/textView1"
                tools:text="@string/_angka__1_111_671" />

            <TextView
            android:id="@+id/tvRecover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8dp"
            android:textColor="#4FC654"
            android:textSize="@dimen/_24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tvSembuh"
            app:layout_constraintTop_toBottomOf="@+id/tvSembuh"
            tools:text="@string/_905_665" />

        <TextView
            android:id="@+id/tvHospitalized"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8dp"
            android:textColor="#FFC107"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tvDirawat"
            app:layout_constraintTop_toBottomOf="@+id/tvDirawat"
            tools:text="@string/_109904" />
        <TextView
            android:id="@+id/tvDeath"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8dp"
            android:textColor="#ED0000"
            android:textSize="@dimen/_24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tvMeninggal"
            app:layout_constraintTop_toBottomOf="@+id/tvMeninggal"
            tools:text="@string/_30_770" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

<Button
    android:id="@+id/btnProvince"
    android:layout_width="@dimen/_250dp"
    android:layout_height="@dimen/_65dp"
    android:layout_marginTop="@dimen/_40dp"
    android:background="@drawable/provinsi"
    app:layout_constraintEnd_toEndOf="@id/cardView"
    app:layout_constraintStart_toStartOf="@id/cardView"
    app:layout_constraintTop_toBottomOf="@id/cardView"/>

</androidx.constraintlayout.widget.ConstraintLayout>