<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginVertical="@dimen/_4dp"
    app:cardCornerRadius="@dimen/_8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardview_light_background">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8dp"
            android:text="@string/_nama_provinsi"
            android:textSize="@dimen/_18sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="@+id/textView8"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.25" />

        <View
            android:id="@+id/line1"
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:layout_marginBottom="16dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/guideline" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.75" />

        <View
            android:id="@+id/line2"
            android:layout_width="@dimen/_1dp"
            android:layout_height="@dimen/_20dp"
            android:layout_marginBottom="16dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"/>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            android:text="@string/_positif"
            android:textColor="#33B5E5"
            app:layout_constraintEnd_toStartOf="@+id/line1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvName" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sembuh"
            android:textColor="#33B5E5"
            app:layout_constraintEnd_toStartOf="@+id/line2"
            app:layout_constraintStart_toEndOf="@+id/line1"
            app:layout_constraintTop_toTopOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_meninggal"
            android:textColor="#33B5E5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/line2"
            app:layout_constraintTop_toTopOf="@+id/textView8" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cdPositive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/_10dp"
            app:layout_constraintBottom_toBottomOf="@+id/line1"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toTopOf="@+id/line1">

            <TextView
                android:id="@+id/tvPositive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_angka__1_111_671"
                android:background="#71020A"
                android:paddingStart="@dimen/_10dp"
                android:paddingEnd="@dimen/_10dp"
                android:textColor="#FFC107"
                android:textSize="@dimen/_18sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvRecover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/_10dp"
            app:layout_constraintBottom_toBottomOf="@+id/cdPositive"
            app:layout_constraintEnd_toEndOf="@+id/textView8"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toTopOf="@+id/cdPositive" >

            <TextView
                android:id="@+id/tvRecover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_905_665"
                android:background="#71020A"
                android:paddingStart="@dimen/_10dp"
                android:paddingEnd="@dimen/_10dp"
                android:textColor="#33BC39"
                android:textSize="@dimen/_18sp"
                android:textStyle="bold"
                />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/_10dp"
            app:layout_constraintBottom_toBottomOf="@+id/cvRecover"
            app:layout_constraintEnd_toEndOf="@+id/textView9"
            app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintTop_toTopOf="@+id/cvRecover" >

            <TextView
                android:id="@+id/tvDeath"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_30_770"
                android:background="#71020A"
                android:paddingStart="@dimen/_10dp"
                android:paddingEnd="@dimen/_10dp"
                android:textColor="#D83C71"
                android:textSize="@dimen/_18sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>